# gsv

./: .gitignore  AGENTS.md  CHANNELS.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  TODOS.md  feature_request.yml  install.ps1  install.sh  package-lock.json  package.json
cli/: Cargo.toml  (+2 more)
pds/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
pds/docs/: test-deploy.md
pds/lexicons/: space.gsv.agent.card.json  space.gsv.contact.json  space.gsv.instance.json  space.gsv.news.json  space.gsv.package.json  space.gsv.package.like.json  space.gsv.package.release.json  space.gsv.profile.json  space.gsv.status.json  space.gsv.user.json  space.gsv.vouch.json
pds/scripts/: account-smoke.mjs  delete-account-smoke.mjs  deploy-test.sh  firehose-cursor-smoke.mjs  firehose-oversize-smoke.mjs  firehose-smoke.mjs  lexicon-cross-repo-smoke.mjs  migration-smoke.mjs  oauth-confidential-smoke.mjs  oauth-official-client-smoke.mjs  official-client-smoke.mjs  plc-account-smoke.mjs  public-smoke.mjs  publish-space-gsv-lexicons.mjs  seed-test-repo.mjs  xrpc-conformance-smoke.mjs  xrpc-method-coverage.json  xrpc-method-coverage.mjs
pds/src/: atproto_resolver.rs  auth.rs  car.rs  cbor.rs  cid.rs  commit.rs  data_model.rs  do_schema.rs  do_store.rs  dpop.rs  entrypoint.ts  identity.rs  lexicon.rs  lib.rs  mst.rs  oauth.rs  plc.rs  repo.rs  repo_import.rs  service_auth.rs  storage.rs  worker_entry.rs  xrpc.rs
pds/src/worker_entry/: config.rs  directory_object.rs  firehose.rs  http.rs  identity_support.rs  models.rs  repo_object.rs  routing.rs  tests.rs
(+1977 files in other folders)
