[package]
name = "pds"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
atrium-repo = "0.1.8"
base64 = "0.22"
bs58 = "0.5.1"
cid = "0.11.3"
futures-core = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
hmac = "0.12"
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "alloc"] }
pbkdf2 = "0.12"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.6.4"
serde_json = "1"
sha2 = "0.10"
slices-lexicon = "0.3.1"
thiserror = "2"
url = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
worker = { version = "0.7" }
worker-macros = { version = "0.7" }
